# notion_manager

./: .gitignore  README.md  app.py  exploration.ipynb  main.ipynb  main.sh  main_planification.py  main_realise.py  pyproject.toml  requirements.txt  timesheet_data_ingester.ipynb
examples/: add_metadata_in_file.py  modify_dataview_in_obsidian_file.py  modify_metadata_in_file.py
notion_manager/: config.py  mapping.py
notion_manager/data_processing/: data_processing.py
notion_manager/notion/: utils.py
notion_manager/notion/database/: company_database.py  database.py  people_database.py  planification_projet_database.py  project_database.py  temps_projet_database.py
notion_manager/obsidian_formatter/: config.py  dataview.py  metadata.py  page_content.py  tags.py  utils.py
