[tool.poetry]
name = "notion_manager"
version = "0.1.0"
description = "Notion manager to interact with notion databases"
authors = ["Louis Giron <louis@giron-dom.eu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
pandas = "^2.1.1"
fsspec = "^2023.9.2"
openpyxl = "^3.1.2"
textwrap3 = "^0.9.2"
requests = "^2.31.0"
python-dotenv = "^1.0.0"
tqdm = "^4.66.1"
pyyaml = "^6.0.1"
streamlit = "^1.27.2"
structlog = "^23.2.0"
plotly = "^5.18.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.25.2"
black = "^23.10.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
